[package]
name = "Rust-GUI-Calculator"
version = "0.1.0"
authors = ["Justin Bieber <jzw2@gmail.com>", "Max Weis <maxrobweis@gmail.com>"]

[dependencies]
gio = "^0.4.1"
gtk = "^0.4.1"
meval = "^0.1"
relm = "^0.14.6"
relm-attributes = "^0.14.6"
relm-derive = "^0.14.6"

[replace]
"gtk-sys:0.3.4" = { git = "https://github.com/gtk-rs/sys" }
"glib-sys:0.3.4" = { git =" https://github.com/gtk-rs/sys" }
"gdk-pixbuf-sys:0.3.4" = { git =" https://github.com/gtk-rs/sys" }
"gobject-sys:0.3.4" = { git =" https://github.com/gtk-rs/sys" }
"gio-sys:0.3.4" = { git =" https://github.com/gtk-rs/sys" }
"gdk-sys:0.3.4" = { git =" https://github.com/gtk-rs/sys" }
"cairo-sys-rs:0.3.4" = { git =" https://github.com/gtk-rs/cairo" }
"pango-sys:0.3.4" = { git =" https://github.com/gtk-rs/sys" }
